fix: removed duplicate swagger documentation
